--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-from-sol",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Create React template from Solidity SmartContract.",
-  "main": "index.js",
+  "main": "start.js",
   "scripts": {
     "start": "node start.js"
   },
@@ -13,6 +13,6 @@
     "fs": "^0.0.1-security"
   },
   "bin": {
-    "react-from-sol": "node start.js"
+    "react-from-sol": "./start.js"
   }
 }
